--- a/bbs-web/src/main/resources/templates/common/fragments/sidebar.html
+++ b/bbs-web/src/main/resources/templates/common/fragments/sidebar.html
@@ -13,6 +13,12 @@
                     </a>
                 </li>
                 <li>
+                    <a th:href="@{/bbs}" class="side-nav-link">
+                        <i class="dripicons-question"></i>
+                        <span>게시판 목록</span>
+                    </a>
+                </li>
+                <li>
                     <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                         <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
                     <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
