--- a/bbs-web/src/main/resources/templates/auth/modal-login.html
+++ b/bbs-web/src/main/resources/templates/auth/modal-login.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
-</body>
+<th:block th:fragment="modal-login">
+    <div id="modalLogin" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-header">
+                    <h5 class="modal-title">로그인</h5>
+                </div>
+                <div class="modal-body p-4 text-center">
+                    <h5 class="mb-0">Enable this setting?</h5>
+                    <p class="mb-0">You can always change your mind in your account settings.</p>
+                </div>
+                <div class="modal-footer flex-nowrap p-0">
+                    <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 m-0 rounded-0 border-right"><strong>확인</strong></button>
+                    <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 m-0 rounded-0" data-bs-dismiss="modal">취소</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</th:block>
 </html>
