--- a/bbs-web/src/main/resources/templates/common/layout/default_layout.html
+++ b/bbs-web/src/main/resources/templates/common/layout/default_layout.html
@@ -10,25 +10,22 @@
             <div class="col py-3">
                 <th:block th:replace="common/fragments/common_header :: commonHeader"></th:block>
                 <th:block layout:fragment="content"/>
-                <div class="text-end">
-                    <button id="testbtn" type="button" class="btn btn-light text-dark me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</button>
-                </div>
                 <th:block th:replace="common/fragments/common_footer :: commonFooter"></th:block>
             </div>
         </div>
     </div>
     <th:block th:replace="/auth/modal-join :: modal-join"/>
+    <th:block th:replace="/auth/modal-login :: modal-login"/>
 </body>
 
 <script th:inline="javascript">
     $(function (){
-        $("#testbtn").click( () => {
-            console.log("Login s!!")
+        $("#sign_up_btn").click( () => {
             $('#modalSignin').modal('show');
         })
 
-        $("#sign_up_btn").click( () => {
-            console.log("Sign up !!")
+        $("#login_btn").click( () => {
+            $('#modalLogin').modal('show');
         })
     })
 </script>
