--- a/bbs-web/src/main/resources/templates/common/fragments/common_head.html
+++ b/bbs-web/src/main/resources/templates/common/fragments/common_head.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="commonHead">
 
-    <meta charset="UTF-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0"/>
 
     <title>Template-SpringBoot</title>
