--- a/bbs-web/src/main/resources/templates/common/layout/default_layout.html
+++ b/bbs-web/src/main/resources/templates/common/layout/default_layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="common/fragments/common_head :: commonHead"/>
 <body>
