--- a/bbs-web/src/main/resources/templates/board/modal/modal-bbs-register.html
+++ b/bbs-web/src/main/resources/templates/board/modal/modal-bbs-register.html
@@ -3,7 +3,35 @@
 
 <th:block th:fragment="modal-bbs-register">
     <div id="modalBbsRegister" class="modal" tabindex="-1" role="dialog">
-
+        <div class="modal-dialog" role="document">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-header">
+                    <h5 class="modal-title">게시판생성</h5>
+                </div>
+                <div class="modal-body p-4 text-center">
+                    <form id="bbsRegistForm" action="#" name="bbsRegistForm">
+                        <div class="form-floating">
+                            <input type="name"  class="form-control" id="name" name="name" placeholder="name">
+                            <label for="name">Name</label>
+                        </div>
+                        <div class="form-floating">
+                            <div>
+                                <input type="checkbox" id="isAllowedComment" name="isAllowedComment">
+                                <label for="isAllowedComment">댓글허용여부</label>
+                            </div>
+                            <div>
+                                <input type="checkbox"  id="isAllowedAttach" name="isAllowedAttach">
+                                <label for="isAllowedAttach">파일첨부허용여부</label>
+                            </div>
+                        </div>
+                        <button onclick="regist()" class="w-100 btn btn-lg btn-primary" type="button">Create</button>
+                        <div class="modal-footer flex-nowrap p-0">
+                            <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 m-0 rounded-0" data-bs-dismiss="modal">취소</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
 
