--- a/bbs-web/src/main/resources/templates/contents/bbs.html
+++ b/bbs-web/src/main/resources/templates/contents/bbs.html
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
+    <th:block th:replace="/board/modal/modal-bbs-register :: modal-bbs-register"/>
     <script>
 
         var body = {
@@ -43,16 +44,17 @@
         }
         $(function (){
             $('#bbs_crt_btn').click(() => {
-                postCall('/bbs/register',body)
-                    .done(function (result) {
-                        location.href = `/bbs`;
-                    })
-                    .fail(function(jqXHR) {
-                        console.log(jqXHR);
-                    })
-                    .always(function() {
-                        console.log("요청, 응답 결과에 상관없이, 이건 항상 실행됩니다.");
-                    })
+                $('#modalBbsRegister').modal('show');
+                // postCall('/bbs/register',body)
+                // .done(function (result) {
+                //     location.href = `/bbs`;
+                // })
+                // .fail(function(jqXHR) {
+                //     console.log(jqXHR);
+                // })
+                // .always(function() {
+                //     console.log("요청, 응답 결과에 상관없이, 이건 항상 실행됩니다.");
+                // })
             })
         })
     </script>
