--- a/bbs-web/src/main/resources/templates/board/modal/modal-bbs-register.html
+++ b/bbs-web/src/main/resources/templates/board/modal/modal-bbs-register.html
@@ -34,7 +34,24 @@
         </div>
     </div>
     <script>
+        var body = {
+            name : 'Test',
+            isAllowedComment : true,
+            isAllowedAttach : true
+        }
 
+        function regist(){
+            // postCall('/bbs/register',body)
+            // .done(function (result) {
+            //     location.href = `/bbs`;
+            // })
+            // .fail(function(jqXHR) {
+            //     console.log(jqXHR);
+            // })
+            // .always(function() {
+            //     console.log("요청, 응답 결과에 상관없이, 이건 항상 실행됩니다.");
+            // })
+        }
     </script>
 </th:block>
 </html>
