--- a/bbs-web/src/main/resources/templates/contents/bbs.html
+++ b/bbs-web/src/main/resources/templates/contents/bbs.html
@@ -16,16 +16,20 @@
                 <div class="col" th:each="item : ${bbs_list}">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect>
+                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                            </svg>
 
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text" th:text="${item.description}"></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                                     </div>
-                                    <small class="text-muted">9 mins</small>
+<!--                                    <small class="text-muted">9 mins</small>-->
                                 </div>
                             </div>
                         </div>
@@ -36,7 +40,6 @@
     </div>
     <th:block th:replace="/board/modal/modal-bbs-register :: modal-bbs-register"/>
     <script>
-
         $(function (){
             $('#bbs_crt_btn').click(() => {
                 $('#modalBbsRegister').modal('show');
