--- a/bbs-web/src/main/resources/templates/contents/bbs.html
+++ b/bbs-web/src/main/resources/templates/contents/bbs.html
@@ -26,7 +26,7 @@
                                 <p class="card-text" th:text="${item.description}"></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <button id="bbs_detail_btn" th:onclick="|detailBbs(${item.id})|" type="button" class="btn btn-sm btn-outline-secondary">View</button>
                                         <button id="bbs_del_btn" th:onclick="|deleteBbs(${item.id})|" type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                                     </div>
 <!--                                    <small class="text-muted">9 mins</small>-->
@@ -40,6 +40,9 @@
     </div>
     <th:block th:replace="/board/modal/modal-bbs-register :: modal-bbs-register"/>
     <script>
+        function detailBbs(id) {
+            location.href = `/article/${id}`;
+        }
         function deleteBbs(id) {
             url = "/bbs/"+id;
 
