--- a/bbs-web/src/main/resources/templates/article/modal/modal-article-register.html
+++ b/bbs-web/src/main/resources/templates/article/modal/modal-article-register.html
@@ -13,12 +13,16 @@
                 <div class="modal-body p-4 text-center">
                     <form id="articleRegistForm" action="#" name="articleRegistForm">
                         <div class="form-floating">
-                            <input type="name"  class="form-control" id="bbsName" name="name" placeholder="name">
-                            <label for="bbsName">Name</label>
+                            <input type="title"  class="form-control" id="title" name="title" placeholder="title">
+                            <label for="title">title</label>
                         </div>
                         <div class="form-floating">
                             <input type="text"  class="form-control" id="contents" name="contents" placeholder="contents">
                             <label for="contents">Contents</label>
+                        </div>
+                        <div>
+                            <input type="checkbox"  id="isPublic" name="isPublic">
+                            <label for="isPublic">공개여부</label>
                         </div>
                         <button th:onclick="addArticle([[${boardId}]])" class="w-100 btn btn-lg btn-primary" type="button">Create</button>
                         <div class="modal-footer flex-nowrap p-0">
@@ -32,17 +36,17 @@
     <script th:inline="javascript">
 
         function addArticle(id) {
-        }
+            const url = '/article/'+id+'/register';
+            const body = initArticleInfo(id);
 
-        const regist = () => {
-            // const url = `/article/`
-            const body = initArticleInfo()
 
-            postCall('/article/register',body)
+            postCall(url,body)
                 .done(function (result) {
-                    location.href = `/bbs`;
+                    console.log(result);
+                    location.href = `/article/${id}`;
                 })
                 .fail(function(jqXHR) {
+                    console.log("Failed to save article")
                     console.log(jqXHR);
                 })
                 .always(function() {
@@ -51,18 +55,37 @@
 
         }
 
-        function initArticleInfo()
+        // const regist = () => {
+        //     // const url = `/article/`
+        //     const body = initArticleInfo()
+        //
+        //     postCall('/article/register',body)
+        //         .done(function (result) {
+        //             location.href = `/bbs`;
+        //         })
+        //         .fail(function(jqXHR) {
+        //             console.log(jqXHR);
+        //         })
+        //         .always(function() {
+        //             console.log("요청, 응답 결과에 상관없이, 이건 항상 실행됩니다.");
+        //         })
+        //
+        // }
+
+        function initArticleInfo(id)
         {
-            let bbsName = $('#bbsName').val();
-            let description = $('#description').val();
-            let isAllowedComment = document.getElementById('isAllowedComment').checked;
-            let isAllowedAttach = document.getElementById('isAllowedAttach').checked;
+            let boardId = id
+            let articleTitle = $('#title').val();
+            let articleContents = $('#contents').val();
+            let articleCategory = '-';
+            let isPublic = document.getElementById('isPublic').checked;
 
             return {
-                'bbsName' : bbsName,
-                'description' : description,
-                'isAllowedComment' : isAllowedComment,
-                'isAllowedAttach' : isAllowedAttach,
+                'boardId' : boardId,
+                'articleTitle' : articleTitle,
+                'articleContents' : articleContents,
+                'articleCategory' : articleCategory,
+                'isPublic' : isPublic,
             };
         }
 
