--- a/bbs-web/src/main/resources/templates/common/fragments/sidebar.html
+++ b/bbs-web/src/main/resources/templates/common/fragments/sidebar.html
@@ -4,14 +4,13 @@
     <style>
         .sidebar-skeleton{
             position: fixed;
-            left: 0;
-            height: 100vh;
-            bottom: 0;
-            width: 272px;
-            z-index: -10000;
+            /*left: 0;*/
+            /*height: 100vh;*/
+            /*width: 272px;*/
+            /*z-index: -10000;*/
         }
     </style>
-    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+    <div class=" col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
         <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
             <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                 <span class="fs-5 d-none d-sm-inline">Menu</span>
